# ordinals

./: README.markdown  ordinals.cabal
src/: Ordinal.hs
src/Ordinal/: Util.hs
