cabal-version:      3.0
name:               ordinals
version:            0.1.0.0
synopsis:           A library to manipulate ordinals up to phi(2,0) (excluded)
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Grégoire Locqueville
maintainer:         gregoireloc@gmail.com
copyright:          (c) 2024 Grégoire Locqueville
category:           Math
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Ordinal
                    , Ordinal.Util
    -- other-modules:
    -- other-extensions:
    build-depends:    base              ^>= 4.17.2.1
                    , strict            ^>= 0.5.1
                    , strict-containers ^>= 0.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
